--- a/AppHotel/AppHotel/View/CadastrarHospedagem.xaml
+++ b/AppHotel/AppHotel/View/CadastrarHospedagem.xaml
@@ -1,8 +1,54 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="AppHotel.View.CadastrarHospedagem">
+             x:Class="AppHotel.View.CadastrarHospedagem"
+             BackgroundColor="#87CEFA">
     <ContentPage.Content>
-       
+        <StackLayout>
+            <Label Text="Cálculo da Hospedagem" HorizontalTextAlignment="Center" FontSize="Title" TextColor="white" />
+
+            <Label x:Name="lbl_usuario" HorizontalTextAlignment="Center" TextColor="white" />
+
+            <Frame BackgroundColor="#DCDCDC" CornerRadius="10" Margin="10, 0, 10, 10" Padding="20">
+
+                <StackLayout>
+                    <Grid ColumnDefinitions="*, *, 2*" RowDefinitions="*, *">
+                        <Label Grid.Row="0" Grid.Column="0" Text="Adultos: " />
+                        <Label Grid.Row="0" Grid.Column="1" x:Name="lbl_qnt_adultos" BindingContext="{x:Reference stepperAdultos}"
+                           Text="{Binding Value}" />
+
+                        <Stepper Grid.Row="0" Grid.Column="2" x:Name="stepperAdultos" Minimum="0" Maximum="10" Increment="1" />
+
+                        <Label Grid.Row="1" Grid.Column="0" Text="Crianças: " />
+                        <Label Grid.Row="1" Grid.Column="1" x:Name="lbl_qnt_criancas" BindingContext="{x:Reference stepperCriancas}"
+                           Text="{Binding Value}" />
+
+                        <Stepper Grid.Row="1" Grid.Column="2" x:Name="stepperCriancas" Minimum="0" Maximum="10" Increment="1" />
+                    </Grid>
+
+                    <Label Text="Escolha sua suíte: "/>
+                    <Picker x:Name="pck_suite" ItemDisplayBinding="{Binding Nome}" Title="Selecione sua suíte"/>
+
+                    <Frame BackgroundColor="White" CornerRadius="10" Margin="10">
+                        <StackLayout>
+                            <Label Text="Período da estadia"/>
+                            <StackLayout Orientation="Horizontal">
+                                <Label Text="Check-in: "/>
+                                <DatePicker x:Name="dtpck_checkin" DateSelected="dtpck_checkin_DateSelected" Format="dd/MM/yyyy" />
+                            </StackLayout>
+
+                            <StackLayout Orientation="Horizontal">
+                                <Label Text="Check-out:" />
+                                <DatePicker x:Name="dtpck_checkout" Format="dd/MM/yyyy" />
+                            </StackLayout>
+                        </StackLayout>
+                    </Frame>
+
+                    <Button Text="Calcular Hospedagem" Clicked="Button_Clicked" BackgroundColor="White" CornerRadius="20" />
+
+                    <Button Text="Sair" Clicked="Button_Clicked_1" TextColor="Black" BackgroundColor="white" CornerRadius="20" />
+                </StackLayout>
+            </Frame>
+        </StackLayout>
     </ContentPage.Content>
 </ContentPage>
